--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "heroku",
     "express"
   ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -27,5 +25,7 @@
   "devDependencies": {
     "got": "^11.3.0",
     "tape": "^4.7.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
